--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -6,6 +6,7 @@
         "start": "npm run storybook",
         "build": "gulp build",
         "release": "gulp release",
+        "storybook": "storybook dev -p 6006",
         "build-storybook": "build-storybook",
         "commit": "commit",
         "prepublishOnly": "exit 0",
@@ -81,7 +82,7 @@
         "@commitlint/cli": "^18.2.0",
         "@commitlint/config-conventional": "^18.1.0",
         "@commitlint/prompt-cli": "^18.2.0",
-        "@saastack/preset-react": "^2.0.73",
+        "@saastack/preset-react": "file:../preset-react",
         "@storybook/addons": "^6.3.4",
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^12.0.0",
